# CPP

./: README.md  cpp.sublime-workspace  cpp.sublime-workspace.orig
const/: a.out  a1.cpp
experiments/: kill  kill.cpp
experiments/Experiments(for PerfNumb)/: CMakeLists.txt  main  main.cpp  testgmp1
experiments/RSA/: main  main.cpp
experiments/a4/: CMakeLists.txt  main.cpp
experiments/a5/: CMakeLists.txt  main.cpp
experiments/b5/: CMakeLists.txt  main.cpp
experiments/c3/: CMakeLists.txt  main.cpp
experiments/constr/: constr  constr.cpp
experiments/killapp/: CMakeLists.txt  killapp  main.cpp
experiments/killappc/: CMakeLists.txt  killapp  main.c
experiments/perfect_numbers/: CMakeLists.txt  main.cpp  perfect_numbers
experiments/renaming/build-untitled15-Desktop_Qt_5_14_1_GCC_64bit-Debug/: Makefile  laba5  moc_mainwindow.cpp
experiments/technocup/a1/: CMakeLists.txt
home/: .directory
home/schoolOlympic/: a1  a2  a2.cpp  a3  a3.cpp  a4  a4.cpp  a5
lab/lab_dev/: CMakeLists.txt  knapsack.cpp  main.cpp  table.md
lab/lab_dev/libs/: animal.cpp  animal.hpp  csas.cpp  csas.hpp  cts.cpp  cts.hpp  fraction.cpp  fraction.hpp  libs.cpp  libs.hpp  libs_2.cpp  libs_2.hpp  libs_3.cpp  libs_3.hpp  list.hpp  marr.cpp  marr.hpp  menu.cpp  pharmacy.cpp  pharmacy.hpp  predator.cpp  predator.hpp  slau.cpp  slau.hpp  st_pr.cpp  st_pr.hpp  stack.hpp  student.cpp  student.hpp  user.hpp  vector.cpp  vector.hpp
lab/lab_dev/libs2/: student.cpp  student.hpp
training/more_training/: CMakeLists.txt  main.cpp
training/training/: CMakeLists.txt  main  main.cpp
(+243 files in other folders)
